# televido

./: .gitignore  Cargo.toml  README.de.md  README.md  REUSE.toml  justfile  meson.build  meson_options.txt
.github/workflows/: ci.yaml  release.yaml  reuse.yaml
.reuse/: dep5
build-aux/: de.k_bo.Mediathek.Devel.json  de.k_bo.Televido.Devel.json  dist-vendor.sh
data/: de.k_bo.Mediathek.desktop.in  de.k_bo.Mediathek.gschema.xml  de.k_bo.Mediathek.metainfo.xml.in  de.k_bo.Televido.Player.gschema.xml  de.k_bo.Televido.desktop.in  de.k_bo.Televido.gschema.xml  de.k_bo.Televido.metainfo.xml.in  gschemas.compiled  meson.build
data/icons/: meson.build
data/resources/: style-dark.css  style.css
data/resources/icons/scalable/channels/: LICENSE
po/: LINGUAS  POTFILES  POTFILES.in  de.po  fr.po  meson.build  nl.po  pt_BR.po  televido.pot  televido.pot.license
src/: application.rs  channel_icons.rs  config.rs.in  help-overlay.blp  main.rs  meson.build  player.blp  player.rs  preferences.blp  preferences.rs  settings.rs  utils.rs  window.blp  window.rs  zapp.rs
src/launcher/: application_proxy.rs  mod.rs  selector.blp  selector.rs
src/live/: card.blp  card.rs  channels.rs  mod.rs  view.blp  view.rs  zapp.rs
src/mediathek/: card.blp  card.rs  channels.rs  mod.rs  shows.rs  view.blp  view.rs
src/preferences/: dialog.blp  dialog.rs  mod.rs
src/preferences/live/: mod.rs  selector.blp  selector.rs  selector_row.blp  selector_row.rs
subprojects/: blueprint-compiler.wrap
