# SPDX-FileCopyrightText: d-k-bo <d-k-bo@mailbox.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "televido"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
adw = { package = "libadwaita", version = "0.6.0", features = ["v1_5"] }
eyre = "0.6.12"
futures-util = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gsettings-macro = "0.2.0"
gtk = { version = "0.8.1", package = "gtk4", features = ["gnome_46", "blueprint"] }
gvdb-macros = "0.1.12"
html2pango = "0.6.0"
indexmap = { version = "2.2.6", features = ["serde"] }
mediathekviewweb = "0.3.0"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
smart-default = "0.7.1"
time = { version = "0.3.34", features = ["parsing", "serde"] }
tokio = { version = "1.36.0", features = ["time", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zbus = { version = "4.1.2", default-features = false, features = ["tokio"] }
