# SPDX-FileCopyrightText: d-k-bo <d-k-bo@mailbox.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "televido"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_5"] }
eyre = "0.6.12"
futures-util = "0.3.31"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gsettings-macro = "0.2.1"
gtk = { version = "0.9.2", package = "gtk4", features = ["gnome_46", "blueprint"] }
gvdb-macros = "0.1.13"
html2pango = "0.6.0"
indexmap = { version = "2.6.0", features = ["serde"] }
mediathekviewweb = { version = "0.4.0" }
once_cell = "1.20.2"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
smart-default = "0.7.1"
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.40.0", features = ["time", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
