# SPDX-FileCopyrightText: d-k-bo <d-k-bo@mailbox.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "televido"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
adw = { package = "libadwaita", version = "0.7.1", features = ["v1_5"] }
clapper = { git = "https://gitlab.gnome.org/JanGernert/clapper-rs.git", version = "0.1.0" }
clapper-gtk = { git = "https://gitlab.gnome.org/JanGernert/clapper-rs.git", version = "0.1.0" }
eyre = "0.6.12"
futures-util = "0.3.31"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gsettings-macro = "0.2.1"
gst = { version = "0.23.5", package = "gstreamer", features = ["v1_24"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["gnome_46", "blueprint"] }
gvdb-macros = "0.1.14"
html2pango = "0.6.0"
indexmap = { version = "2.7.1", features = ["serde"] }
mediathekviewweb = { version = "0.4.0" }
once_cell = "1.20.3"
phf = { version = "0.11.3", features = ["macros"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
smart-default = "0.7.1"
time = { version = "0.3.37", features = ["parsing", "serde"] }
tokio = { version = "1.43.0", features = ["fs", "time", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }

[profile.dev.build-override]
opt-level = 3
